--- a/styles/awesome.css
+++ b/styles/awesome.css
@@ -1,11 +1,7 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
 .awesome {
     width: 100%;
     height: 100%;
+    background-color: #fff;
 }
 
 .awesome-block {
