--- a/styles/customers.css
+++ b/styles/customers.css
@@ -1,11 +1,7 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
 .customers {
     width: 100%;
     height: 100%;
+    background-color: #fff;
 }
 
 .customers-block {
@@ -39,19 +35,29 @@
     font-weight: 400;
 }
 
-.customers-block-top-section {
+.customers-block-section {
     width: 100%;
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 64px;
+}
+
+.customers-block-tweets {
+    box-sizing: border-box;
+    width: 400px;
     display: flex;
     justify-content: space-between;
     padding-top: 83px;
+    flex-direction: column;
 }
 
-.customers-block-messages {
+.customers-block-tweets-messages {
+    width: 100%;
     display: flex;
     flex-direction: row;
 }
 
-.customers-block-messages__text {
+.customers-block-tweets-messages__text {
     width: 370px;
     height: 180px;
     display: flex;
@@ -62,39 +68,33 @@
     font-family: 'Raleway', sans-serif;
     font-size: 18px;
     font-weight: 400;
+    margin-bottom: 66px;
+    padding: 0px 25px 0px 25px;
 }
 
-.customers-block-messages__images {
+.customers-block-tweets-messages__images {
     display: flex;
     flex-direction: row;
     position: relative;
-    top: 99px;
+    top: 67px;
     right: 300px;
 }
 
-.customers-block-bottom-section {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding-top: 66px;
-    padding-bottom: 64px;
-}
-
-.customers-block-people {
+.customers-block-tweets-people {
     width: 370px;
     display: flex;
 }
 
-.customers-block-people__photos {
+.customers-block-tweets-people__photos {
     height: 70px;
     border-radius: 70px;
 }
 
-.customers-block-people-info {
+.customers-block-tweets-people-info {
     margin-left: 30px; 
 }
 
-.customers-block-people__names {
+.customers-block-tweets-people__names {
     display: flex;
     height: 54px;
     flex-direction: column;
@@ -105,7 +105,7 @@
     padding-bottom: 15px;
 }
 
-.customers-block-people__job {
+.customers-block-tweets-people__job {
     display: flex;
     font-family: 'Raleway', sans-serif;
     font-size: 18px;
