--- a/styles/design.css
+++ b/styles/design.css
@@ -1,13 +1,12 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
 .design {
     width: 100%;
     height: 100%;
     background-image: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/background.jpg");
     background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-attachment: scroll;
 }
 
 .design-block {
