--- a/styles/tabs.css
+++ b/styles/tabs.css
@@ -1,17 +1,14 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
 .tabs {
     width: 100%;
     height: 100%;
+    background-color: #fff;
 }
 
 .tabs-block {
     text-align: center;
     width: 1170px;
     margin: 0 auto;
+    padding-top: 99px;
 }
 
 .tabs-block-top {
