--- a/styles/social-media.css
+++ b/styles/social-media.css
@@ -45,3 +45,60 @@
 .social-media-right-side__icons {
     width: 70px;
 }
+
+@media screen and (max-width: 1200px) {
+    .social-media-block {
+        width: 95%;
+        height: 105px;
+    }
+    .social-media-left-side__title {
+        height: 45px;
+        font-size: 18px;
+        margin-bottom: 13px;
+    }
+    .social-media-left-side__subtitle {
+        width: 402px;
+        font-size: 14px;
+    }
+    .social-media-right-side__icons {
+        width: 64px;
+        height: 64px;
+    }
+    .social-media-right-side {
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 928px){
+    .social-media-block {
+        width: 95%;
+        height: 239px;
+        display: flex;
+        flex-direction: column;
+    } 
+    .social-media-left-side__title {
+        display: flex;
+        height: 45px;
+        justify-content: center;
+        font-size: 18px;
+        margin-bottom: 13px;
+        margin-top: 31px;
+    }
+    .social-media-left-side__subtitle {
+        width: 271px;
+        font-size: 14px;
+        margin: 0 auto;
+        text-align: center;
+    }
+    .social-media-right-side {
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+        margin-top: 32px;
+        margin-left: 0px;
+    }
+    .social-media-right-side__icons {
+        width: 26px;
+        height: 26px;
+    }
+}
