--- a/styles/tabs.css
+++ b/styles/tabs.css
@@ -100,3 +100,98 @@
 .tabs-block-right-side {
     display: inline-block;
 }
+
+@media screen and (max-width: 1200px) {
+    .tabs-block {
+        width: 95%;
+        padding-top: 50px;
+    }
+    .tabs-block-top__buttons {
+        width: 172.116px;
+    }
+    .tabs-block-top__empty-button {
+        width: 508.718px;
+    }
+    .tabs-block-main {
+        height: 385px;
+        display: flex;
+        justify-content: space-between;
+    }
+    .tabs-block-left-side__title {
+        font-size: 24px;
+        margin-left: 84.68px;
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+    .tabs-block-left-side__subtitle {
+        width: 482.894px;
+        font-size: 14px;
+        margin: 38px 0px 38px 84.68px;
+    }
+    .tabs-block-left-side__download {
+        width: 231.87px;
+        height: 58px;
+        font-size: 18px;
+        margin-left: 84.68px;
+    }
+    .tabs-block-right-side__image {
+        height: 385px;
+    }
+}
+
+@media screen and (max-width: 979px) {
+    .tabs-block {
+        width: 95%;
+        padding-top: 41px;
+    }
+    .tabs-block-top__buttons {
+        width: 100%
+    }
+    .tabs-block-main {
+        height: 431px;
+        justify-content: center;
+    }
+    .tabs-block-left-side__title {
+        font-size: 18px;
+        margin-left: 0px;
+        padding-top: 37px;
+        padding-bottom: 37px;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        text-align: center;
+    }
+    .tabs-block-left-side__subtitle {
+        width: 242.743px;
+        font-size: 13px;
+        margin: 0 auto;
+        text-align: center;
+        flex-wrap: wrap;
+        margin-bottom: 29px;
+    }
+    .tabs-block-left-side__download {
+        width: 242.743px;
+        height: 50px;
+        font-size: 18px;
+        margin-left: 0px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        margin: 0 auto;
+    }
+    .tabs-block-right-side__image {
+        display: none;
+    }
+    .tabs-block-top__buttons:nth-child(2) {
+        width: 100%;
+    }
+    
+    .tabs-block-top__buttons:nth-child(3) {
+        width: 100%;
+    }
+    .tabs-block-top__empty-button {
+        display: none;
+    }
+}
+
